Extra line wraps fix
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C926795

--- a/ebookGenerator/resources/StaticFiles/xpp/css/document.css
+++ b/ebookGenerator/resources/StaticFiles/xpp/css/document.css
@@ -737,6 +737,10 @@ sup + .footnote_body > .para:first-child {
   margin: 0;
 }
 
+.cite {
+  display: inline;
+}
+
 .toc_primary_hierarchy > .primary_outline_name_block > .label + .t,
 .toc_primary_hierarchy > .primary_outline_name_block > .designator + .t {
   width: auto;
