--- a/ebookGenerator/resources/StaticFiles/xpp/scss/Primary Source/main content.scss
+++ b/ebookGenerator/resources/StaticFiles/xpp/scss/Primary Source/main content.scss
@@ -19,3 +19,7 @@
         margin: 0;
     }
 }
+
+.cite {
+  display: inline;
+}
